--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./assets/stylesheets/style.css" />
-    <title>Guess The Number!</title>
+    <title>Acerte o número!</title>
   </head>
 
   <body>
     <header>
-      <h1>Guess The Number!</h1>
+      <h1>Acerte o número🤔</h1>
       <p class="between">(Entre 1 e 20)</p>
-      <button class="btn again">Denovo!</button>
+      <button class="btn again">Denovo</button>
       <div class="number">?</div>
     </header>
     <main>
       <section class="left">
         <input type="number" class="guess" />
-        <button class="btn check">Tentar!</button>
+        <button class="btn check">Tentar</button>
       </section>
       <section class="right">
         <p class="message">Comece a tentar...</p>
